--- a/addons/godot_state_charts/plugin.cfg
+++ b/addons/godot_state_charts/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Godot State Charts"
 description="A simple, yet powerful state charts library for Godot"
-author=""
-version=""
+author="Jan Thomä & Contributors"
+version="0.2.0"
 script="godot_state_charts.gd"
