--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "project": "${workspaceFolder}",
             "port": 6007,
-            "address": "tcp://127.0.0.1",
+            "debugServer": 6006,
+            "address": "127.0.0.1",
             "launch_game_instance": true,
             "launch_scene": false
         }
