fix: reentrance lock during state changes / callbacks

--- a/godot-state-charts.csproj
+++ b/godot-state-charts.csproj
@@ -4,4 +4,148 @@
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>godotstatecharts</RootNamespace>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="addons\godot_state_charts\all_of_guard.gd" />
+    <Content Include="addons\godot_state_charts\all_of_guard.svg" />
+    <Content Include="addons\godot_state_charts\all_of_guard.svg.import" />
+    <Content Include="addons\godot_state_charts\animation_player_state.gd" />
+    <Content Include="addons\godot_state_charts\animation_player_state.svg" />
+    <Content Include="addons\godot_state_charts\animation_player_state.svg.import" />
+    <Content Include="addons\godot_state_charts\animation_tree_state.gd" />
+    <Content Include="addons\godot_state_charts\animation_tree_state.svg" />
+    <Content Include="addons\godot_state_charts\animation_tree_state.svg.import" />
+    <Content Include="addons\godot_state_charts\any_of_guard.gd" />
+    <Content Include="addons\godot_state_charts\any_of_guard.svg" />
+    <Content Include="addons\godot_state_charts\any_of_guard.svg.import" />
+    <Content Include="addons\godot_state_charts\atomic_state.gd" />
+    <Content Include="addons\godot_state_charts\atomic_state.svg" />
+    <Content Include="addons\godot_state_charts\atomic_state.svg.import" />
+    <Content Include="addons\godot_state_charts\compound_state.gd" />
+    <Content Include="addons\godot_state_charts\compound_state.svg" />
+    <Content Include="addons\godot_state_charts\compound_state.svg.import" />
+    <Content Include="addons\godot_state_charts\expression_guard.gd" />
+    <Content Include="addons\godot_state_charts\expression_guard.svg" />
+    <Content Include="addons\godot_state_charts\expression_guard.svg.import" />
+    <Content Include="addons\godot_state_charts\godot_state_charts.gd" />
+    <Content Include="addons\godot_state_charts\guard.gd" />
+    <Content Include="addons\godot_state_charts\history_state.gd" />
+    <Content Include="addons\godot_state_charts\history_state.svg" />
+    <Content Include="addons\godot_state_charts\history_state.svg.import" />
+    <Content Include="addons\godot_state_charts\LICENSE" />
+    <Content Include="addons\godot_state_charts\not_guard.gd" />
+    <Content Include="addons\godot_state_charts\not_guard.svg" />
+    <Content Include="addons\godot_state_charts\not_guard.svg.import" />
+    <Content Include="addons\godot_state_charts\parallel_state.gd" />
+    <Content Include="addons\godot_state_charts\parallel_state.svg" />
+    <Content Include="addons\godot_state_charts\parallel_state.svg.import" />
+    <Content Include="addons\godot_state_charts\plugin.cfg" />
+    <Content Include="addons\godot_state_charts\saved_state.gd" />
+    <Content Include="addons\godot_state_charts\state.gd" />
+    <Content Include="addons\godot_state_charts\state_chart.gd" />
+    <Content Include="addons\godot_state_charts\state_chart.svg" />
+    <Content Include="addons\godot_state_charts\state_chart.svg.import" />
+    <Content Include="addons\godot_state_charts\state_is_active_guard.gd" />
+    <Content Include="addons\godot_state_charts\state_is_active_guard.svg" />
+    <Content Include="addons\godot_state_charts\state_is_active_guard.svg.import" />
+    <Content Include="addons\godot_state_charts\toggle_sidebar.svg" />
+    <Content Include="addons\godot_state_charts\toggle_sidebar.svg.import" />
+    <Content Include="addons\godot_state_charts\transition.gd" />
+    <Content Include="addons\godot_state_charts\transition.svg" />
+    <Content Include="addons\godot_state_charts\transition.svg.import" />
+    <Content Include="addons\godot_state_charts\utilities\debugger_history.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_debugger\editor_debugger.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_debugger\editor_debugger.tscn" />
+    <Content Include="addons\godot_state_charts\utilities\editor_debugger\editor_debugger_message.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_debugger\editor_debugger_plugin.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_debugger\editor_debugger_remote.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_debugger\editor_debugger_state_info.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_sidebar.gd" />
+    <Content Include="addons\godot_state_charts\utilities\editor_sidebar.tscn" />
+    <Content Include="addons\godot_state_charts\utilities\event_editor\event_editor.gd" />
+    <Content Include="addons\godot_state_charts\utilities\event_editor\event_inspector_plugin.gd" />
+    <Content Include="addons\godot_state_charts\utilities\event_refactor\event_refactor.gd" />
+    <Content Include="addons\godot_state_charts\utilities\event_refactor\event_refactor.tscn" />
+    <Content Include="addons\godot_state_charts\utilities\ring_buffer.gd" />
+    <Content Include="addons\godot_state_charts\utilities\state_chart_debugger.gd" />
+    <Content Include="addons\godot_state_charts\utilities\state_chart_debugger.svg" />
+    <Content Include="addons\godot_state_charts\utilities\state_chart_debugger.svg.import" />
+    <Content Include="addons\godot_state_charts\utilities\state_chart_debugger.tscn" />
+    <Content Include="addons\godot_state_charts\utilities\state_chart_util.gd" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant\ant.gd" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant\ant.gdshader" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant\ant.tscn" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant\walk.png" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant\walk.png.import" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant_hill_demo.gd" />
+    <Content Include="godot_state_charts_examples\ant_hill\ant_hill_demo.tscn" />
+    <Content Include="godot_state_charts_examples\ant_hill\banana\banana.svg" />
+    <Content Include="godot_state_charts_examples\ant_hill\banana\banana.svg.import" />
+    <Content Include="godot_state_charts_examples\ant_hill\banana\banana.tscn" />
+    <Content Include="godot_state_charts_examples\ant_hill\marker\circle_white.svg" />
+    <Content Include="godot_state_charts_examples\ant_hill\marker\circle_white.svg.import" />
+    <Content Include="godot_state_charts_examples\ant_hill\marker\marker.gd" />
+    <Content Include="godot_state_charts_examples\ant_hill\marker\marker.tscn" />
+    <Content Include="godot_state_charts_examples\ant_hill\nest\nest.svg" />
+    <Content Include="godot_state_charts_examples\ant_hill\nest\nest.svg.import" />
+    <Content Include="godot_state_charts_examples\ant_hill\nest\nest.tscn" />
+    <Content Include="godot_state_charts_examples\ant_hill\pause_controller.gd" />
+    <Content Include="godot_state_charts_examples\automatic_transitions\automatic_transitions_demo.tscn" />
+    <Content Include="godot_state_charts_examples\automatic_transitions\stamina_bar.gd" />
+    <Content Include="godot_state_charts_examples\automatic_transitions\the_frog.gd" />
+    <Content Include="godot_state_charts_examples\cooldown\cooldown_demo.tscn" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\cooldown_overlay.png" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\cooldown_overlay.png.import" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\enchant-red-3.png" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\enchant-red-3.png.import" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\fireball-eerie-2.png" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\fireball-eerie-2.png.import" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\heal-jade-2.png" />
+    <Content Include="godot_state_charts_examples\cooldown\icons\heal-jade-2.png.import" />
+    <Content Include="godot_state_charts_examples\cooldown\LICENSE.md" />
+    <Content Include="godot_state_charts_examples\cooldown\skill_button\skill_button.gd" />
+    <Content Include="godot_state_charts_examples\cooldown\skill_button\skill_button.tscn" />
+    <Content Include="godot_state_charts_examples\history_states\history_demo.gd" />
+    <Content Include="godot_state_charts_examples\history_states\history_demo.tscn" />
+    <Content Include="godot_state_charts_examples\history_states\white_rectangle.svg" />
+    <Content Include="godot_state_charts_examples\history_states\white_rectangle.svg.import" />
+    <Content Include="godot_state_charts_examples\new_theme.tres" />
+    <Content Include="godot_state_charts_examples\order_of_events\order_of_events.tscn" />
+    <Content Include="godot_state_charts_examples\performance_test\hundred_state_charts.tscn" />
+    <Content Include="godot_state_charts_examples\performance_test\state_chart.tscn" />
+    <Content Include="godot_state_charts_examples\performance_test\state_chart_receiver.gd" />
+    <Content Include="godot_state_charts_examples\performance_test\ten_state_charts.tscn" />
+    <Content Include="godot_state_charts_examples\performance_test\thousand_state_charts.tscn" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\break.png" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\break.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\breaking_box.gd" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\breaking_box.tscn" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\hit.png" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\hit.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\idle.png" />
+    <Content Include="godot_state_charts_examples\platformer\breaking_box\idle.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint.gd" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint.tscn" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint_flag_out.png" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint_flag_out.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint_idle.png" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint_idle.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint_no_flag.png" />
+    <Content Include="godot_state_charts_examples\platformer\checkpoint\checkpoint_no_flag.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\fireworks_box\box.png" />
+    <Content Include="godot_state_charts_examples\platformer\fireworks_box\box.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\fireworks_box\fireworks_box.gd" />
+    <Content Include="godot_state_charts_examples\platformer\fireworks_box\fireworks_box.tscn" />
+    <Content Include="godot_state_charts_examples\platformer\ninja_frog\full.png" />
+    <Content Include="godot_state_charts_examples\platformer\ninja_frog\full.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\ninja_frog\ninja_frog.gd" />
+    <Content Include="godot_state_charts_examples\platformer\ninja_frog\ninja_frog.tscn" />
+    <Content Include="godot_state_charts_examples\platformer\platformer_demo.tscn" />
+    <Content Include="godot_state_charts_examples\platformer\terrain\green.png" />
+    <Content Include="godot_state_charts_examples\platformer\terrain\green.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\terrain\terrain_tiles.png" />
+    <Content Include="godot_state_charts_examples\platformer\terrain\terrain_tiles.png.import" />
+    <Content Include="godot_state_charts_examples\platformer\terrain\terrain_tiles.tres" />
+    <Content Include="godot_state_charts_examples\stepping\stepping.gd" />
+    <Content Include="godot_state_charts_examples\stepping\stepping.tscn" />
+  </ItemGroup>
 </Project>
