fix: rename "State" class to "StateChartState" to avoid conflicts with other code
fixes #97

--- a/godot-state-charts.csproj
+++ b/godot-state-charts.csproj
@@ -40,7 +40,7 @@
     <Content Include="addons\godot_state_charts\parallel_state.svg.import" />
     <Content Include="addons\godot_state_charts\plugin.cfg" />
     <Content Include="addons\godot_state_charts\saved_state.gd" />
-    <Content Include="addons\godot_state_charts\state.gd" />
+    <Content Include="addons\godot_state_charts\state_chart_state.gd" />
     <Content Include="addons\godot_state_charts\state_chart.gd" />
     <Content Include="addons\godot_state_charts\state_chart.svg" />
     <Content Include="addons\godot_state_charts\state_chart.svg.import" />
