--- a/.gut_editor_config.json
+++ b/.gut_editor_config.json
@@ -31,7 +31,7 @@
  "post_run_script": "",
  "pre_run_script": "",
  "prefix": "test_",
- "selected": "test_not_guard.gd",
+ "selected": null,
  "should_exit": false,
  "should_exit_on_success": true,
  "should_maximize": false,
