--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup Project
-        run: timeout 25s godot -e --headless || true
+        run: timeout 10s godot -e --headless || true
       - name: Run tests
-        run: godot -e --headless --path "$PWD" -s addons/gut/gut_cmdln.gd -gdir=res://tests/ -gprefix=test_ -gsuffix=.gd -gexit -ginclude_subdirs
+        run: godot --headless --path "$PWD" -s addons/gut/gut_cmdln.gd -gdir=res://tests/ -gprefix=test_ -gsuffix=.gd -gexit -ginclude_subdirs
