feat: make transition delay an expression
closes #121
closes #122

--- a/.gut_editor_config.json
+++ b/.gut_editor_config.json
@@ -32,8 +32,8 @@
  "pre_run_script": "",
  "prefix": "test_",
  "selected": null,
- "should_exit": false,
- "should_exit_on_success": true,
+ "should_exit": true,
+ "should_exit_on_success": false,
  "should_maximize": false,
  "show_help": false,
  "suffix": ".gd",
