--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Setup Project
         run: timeout 10s godot -e --headless || true
       - name: Run tests
-        run: godot --headless --path "$PWD" -s addons/gut/gut_cmdln.gd -gdir=res://tests/ -gprefix=test_ -gsuffix=.gd -gexit -ginclude_subdirs
+        run: godot --headless --path "$PWD" -d -s addons/gut/gut_cmdln.gd -gdir=res://tests/ -gprefix=test_ -gsuffix=.gd -gexit -ginclude_subdirs
