doc: improvements on structure and fix links

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,11 +1,16 @@
 - title: "Home"
   url: ""
-- title: "Introduction"
-  url: "introduction"
 - title: "Instalation"
   url: "installation"
 - title: "Usage"
   url: "usage"
+  links:
+    - title: "States"
+      url: "usage/states"
+    - title: "Events and transitions"
+      url: "usage/events-and-transitions"
+    - title: "Debugging"
+      url: "usage/debugging"
 - title: "Stepping Mode"
   url: "stepping-mode"
 - title: "Tips & Tricks"
