--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -1,20 +1,20 @@
 - title: "Home"
   url: ""
-- title: "Instalation"
+- title: "Installation & Updating"
   url: "installation"
 - title: "Usage"
   url: "usage"
   links:
-    - title: "States"
-      url: "usage/states"
+    - title: "Nodes"
+      url: "usage/nodes"
     - title: "Events and transitions"
       url: "usage/events-and-transitions"
     - title: "Debugging"
       url: "usage/debugging"
-- title: "Stepping Mode"
-  url: "stepping-mode"
-- title: "Tips & Tricks"
-  url: "tips-and-tricks"
+    - title: "Stepping Mode"
+      url: "usage/stepping-mode"
+    - title: "Tips & Tricks"
+      url: "usage/tips-and-tricks"
 - title: "Appendix"
   url: "appendix"
 - title: "FAQ"
