--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -1,12 +1,9 @@
-version: '3.7'
 services:
   site:
     container_name: docsy
-    command: jekyll serve --watch --drafts
-    image: jekyll/jekyll:3.8
+    command: jekyll serve --force_polling --drafts
+    image: jekyll/jekyll:4.2.2
     volumes: 
       - "./:/srv/jekyll"
-      - "./vendor/bundle:/usr/local/bundle"
-      # remove "./vendor/bundle:/usr/local/bundle" volume when deploying in production
     ports: 
       - "4000:4000"
