--- a/godot-state-charts.csproj
+++ b/godot-state-charts.csproj
@@ -394,6 +394,7 @@
     <Content Include="tests\test_any_of_guard.gd" />
     <Content Include="tests\test_automatic_transition_leaving_compound_state.gd" />
     <Content Include="tests\test_automatic_transition_on_property_change.gd" />
+    <Content Include="tests\test_multiple_delayed_transition.gd" />
     <Content Include="tests\test_parallel_state_event_handling.gd" />
     <Content Include="tests\test_automatic_transition_on_state_enter.gd" />
     <Content Include="tests\test_immediate_condition_state.gd" />
