chore: add saving and loading to doc indices

--- a/docs/_data/toc.yml
+++ b/docs/_data/toc.yml
@@ -13,6 +13,8 @@
       url: "usage/debugging"
     - title: "Stepping Mode"
       url: "usage/stepping-mode"
+    - title: "Saving and Loading" 
+      url: "usage/saving-and-loading"
     - title: "Tips & Tricks"
       url: "usage/tips-and-tricks"
 - title: "Appendix"
